--- a/templates/index.html
+++ b/templates/index.html
@@ -1,40 +1,178 @@
 <!DOCTYPE html>
+
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap"
+      rel="stylesheet"
+    />
+
     <title>Chat Prediction</title>
-</head>
-<body>
-    <h1>Chat Prediction</h1>
-    <textarea id="inputText" rows="4" cols="50" placeholder="Enter your message"></textarea>
-    <button onclick="predict()">Predict</button>
-    <p id="predictionResult"></p>
 
-    <script>
-        function predict() {
-            // Get the input message
-            var message = document.getElementById("inputText").value;
+    <style>
+      body {
+        font-family: "Montserrat", sans-serif;
+        background-color: #f4f4f4;
+      }
 
-            // Make a POST request to the Flask API
-            fetch('/predict', {
-                method: 'POST',
-                headers: {
-                    'Content-Type': 'application/json'
-                },
-                body: JSON.stringify({
-                    message: message
-                })
-            })
-            .then(response => response.json())
-            .then(data => {
-                // Display the predicted response
-                document.getElementById("predictionResult").innerText = data.answer;
-            })
-            .catch(error => {
-                console.error('Error:', error);
-            });
-        }
-    </script>
-</body>
+      #chat-container {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        width: 600px;
+        margin: 0 auto;
+        border: 1px solid #ddd;
+        border-radius: 5px;
+        padding: 20px;
+        box-shadow: 0 2px 5px rgba(0, 0, 0, 0.1);
+        background-color: #fff;
+      }
+
+      h1 {
+        color: #333;
+        font-size: 30px;
+      }
+
+      #messages {
+        width: 100%;
+        margin-bottom: 20px;
+        padding: 10px;
+        overflow-y: auto;
+        height: 300px;
+        background-color: #f5f5f5;
+        border-radius: 5px;
+      }
+
+      .message {
+        margin-bottom: 10px;
+        padding: 10px 20px;
+        border-radius: 10px;
+        width: fit-content;
+        display: inline-block;
+        max-width: 60%;
+        clear: both;
+      }
+
+      .user-message {
+        text-align: right;
+        margin-right: 10px;
+        background-color: #007bff;
+        color: white;
+        float: right;
+      }
+
+      .bot-message {
+        text-align: left;
+        margin-left: 10px;
+        background-color: #28a745;
+        color: white;
+        float: left;
+      }
+
+      .message p {
+        margin: 0;
+      }
+
+      #inputText {
+        width: 95%;
+        padding: 14px;
+        border: 1px solid #ccc;
+        border-radius: 5px;
+        resize: none;
+        font-size: 15px;
+      }
+
+      button {
+        background-color: #007bff;
+        color: white;
+        border: none;
+        padding: 10px 20px;
+        border-radius: 5px;
+        cursor: pointer;
+        margin-top: 20px;
+        transition: background-color 0.3s ease;
+      }
+
+      button:hover {
+        background-color: #0056b3;
+      }
+
+      #loadingGif {
+        display: none;
+        width: 50px;
+        height: 50px;
+      }
+    </style>
+  </head>
+
+  <body>
+    <div id="chat-container">
+      <h1>E-commerce Chatbot</h1>
+
+      <div id="messages"></div>
+
+      <input
+        type="text"
+        id="inputText"
+        rows="4"
+        placeholder="Ask me anything..."
+      />
+
+      <button onclick="sendMessage()">Send</button>
+    </div>
+  </body>
+
+  <script>
+    function appendMessage(message, sender) {
+      const messagesContainer = document.getElementById("messages");
+      const messageElement = document.createElement("div");
+
+      messageElement.textContent = message;
+
+      messageElement.classList.add("message");
+
+      if (sender === "user") {
+        messageElement.classList.add("user-message");
+      } else if (sender === "bot") {
+        messageElement.classList.add("bot-message");
+      }
+
+      messagesContainer.appendChild(messageElement);
+      messagesContainer.scrollTop = messagesContainer.scrollHeight;
+    }
+
+    function sendMessage() {
+      const inputElement = document.getElementById("inputText");
+      const message = inputElement.value.trim();
+
+      if (message === "") return;
+
+      appendMessage(message, "user");
+      inputElement.value = "";
+
+      setTimeout(() => {
+        fetch("/predict", {
+          method: "POST",
+          headers: {
+            "Content-Type": "application/json",
+          },
+          body: JSON.stringify({
+            message: message,
+          }),
+        })
+          .then((response) => response.json())
+          .then((data) => {
+            appendMessage(data.answer, "bot");
+          })
+          .catch((error) => {
+            console.error("Error:", error);
+          });
+      }, 1000);
+    }
+  </script>
 </html>
